# algorithms-analyzer

./: .gitignore  LICENSE.md  README.md  main.py  main.spec  pyproject.toml  requirements.txt
app/: __init__.py
app/controllers/: __init__.py  main_controller.py  model_controller.py  view_controller.py
app/models/: __init__.py  algorithms.py  decorations.py  model.py
app/views/: __init__.py  main_view.py  main_view_ui.py  ui.py
docs/: README.md  index.md
