[tool.poetry]
name = "algoritm-analyzer"
version = "1.0.0"
description = ""
authors = ["ullyzian <aviev2000@icloud.com>"]

[tool.poetry.dependencies]
python = "^3.8.3"
PyQt5 = "^5.15.2"
pyqtgraph = "^0.11.0"
pyinstaller = "^4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
